fixed navbar centering issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -55,19 +55,15 @@ html {
 .navbar {
   position: fixed;
   width: 100%;
-  padding: 5px;
   z-index: 1;
+  padding-top: 7px;
   display: flex;
   justify-content: space-evenly;
-  align-self: center;
-  align-items: center;
-  padding: 7px;
 }
 
 .navbar a {
   display:inline-block;
-  padding: 10px 20px;
-
+  padding: 10px 10px;
   border-radius: 15px;;
   background-color:#61dafb;
   transition: background-color 0.3s ease-in-out;
@@ -79,9 +75,7 @@ html {
 
 /* Extra small devices*/
 @media (max-width: 400px) {
-  .navbar{
-    max-width: 350px;
-  }
+
 }
 
 /*Welcome section =====================================================*/
